--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,26 +3,58 @@
     package="com.example.kengdie.androidstudy">
 
     <application
+        android:name=".app"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:label="main1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Myaty" android:exported="true"
-            android:label="Myaty">
-            <intent-filter >
-                <category android:name="android.intent.category.DEFAULT"/>
-                <action android:name="com.example.kengdie.androidstudy.main.Myaty"/>
-                <data android:scheme="app"/>
+        <activity
+            android:name=".Main2"
+            android:label="main2">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Myaty"
+            android:exported="true"
+            android:label="Myaty">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="com.example.kengdie.androidstudy.main.Myaty" />
+
+                <data android:scheme="app" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Localapp"
+            android:label="localapp">
+            <intent-filter>
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="myapp" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Context" />
+
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
